--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -10,25 +10,45 @@ env:
   BUILD_TYPE: Debug
 
 jobs:
-  build:
+  build-ubuntu:
+    name: Build on Ubuntu
     runs-on: ubuntu-22.04
 
     steps:
     - uses: actions/checkout@v3
     
-    - name: Install Dependencies
+    - name: Install Dependencies (Ubuntu)
       run: sudo apt-get update && sudo apt-get install -y cmake clang gcc g++ build-essential libboost-system-dev libboost-thread-dev libboost-program-options-dev libboost-test-dev
-      
-    - name: Install LLVM
+
+    - name: Install LLVM (Ubuntu)
       run: sudo apt-get purge python3-lldb-14 && wget https://apt.llvm.org/llvm.sh && chmod +x llvm.sh && sudo ./llvm.sh 17
 
-    - name: Configure CMake
+    - name: Configure CMake (Ubuntu)
       run: cmake -B ${{github.workspace}}/build -DCMAKE_BUILD_TYPE=${{env.BUILD_TYPE}}
 
-    - name: Build
+    - name: Build (Ubuntu)
       run: cmake --build ${{github.workspace}}/build --config ${{env.BUILD_TYPE}}
 
-    - name: Testing
+    - name: Testing (Ubuntu)
       working-directory: ${{github.workspace}}/build
       run: ctest -C ${{env.BUILD_TYPE}}
 
+  build-macos:
+    name: Build on macOS
+    runs-on: macos-latest
+
+    steps:
+    - uses: actions/checkout@v3
+
+    - name: Install Dependencies (macOS)
+      run: brew install cmake llvm boost
+
+    - name: Configure CMake (macOS)
+      run: cmake -B ${{github.workspace}}/build -DCMAKE_BUILD_TYPE=${{env.BUILD_TYPE}}
+
+    - name: Build (macOS)
+      run: cmake --build ${{github.workspace}}/build --config ${{env.BUILD_TYPE}}
+
+    - name: Testing (macOS)
+      working-directory: ${{github.workspace}}/build
+      run: ctest -C ${{env.BUILD_TYPE}}
