--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -49,6 +49,7 @@ jobs:
     - name: Remove Conflicting Python Files
       run: |
         rm -f '/usr/local/bin/2to3'
+        brew reinstall pipenv
 
     # Install Dependencies (macOS)
     - name: Install Dependencies (macOS)
