--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -63,13 +63,17 @@ jobs:
           brew install python@3.11
         fi
 
-    # Set LLVM_DIR environment variable
-    - name: Set LLVM_DIR environment variable
-      run: echo "LLVM_DIR=$(brew --prefix llvm)/lib/cmake/llvm" >> $GITHUB_ENV
+    # Set environment variables for compilers to find llvm
+    - name: Set LLVM and Compiler Flags
+      run: |
+        echo 'export PATH="/usr/local/opt/llvm/bin:$PATH"' >> /Users/runner/.bash_profile
+        echo "LLVM_DIR=$(brew --prefix llvm)/lib/cmake/llvm" >> $GITHUB_ENV
+        echo "LDFLAGS=-L/usr/local/opt/llvm/lib" >> $GITHUB_ENV
+        echo "CPPFLAGS=-I/usr/local/opt/llvm/include" >> $GITHUB_ENV
 
     # Configure CMake (macOS)
     - name: Configure CMake (macOS)
-      run: cmake -B ${{github.workspace}}/build -DCMAKE_BUILD_TYPE=${{env.BUILD_TYPE}} -DLLVM_DIR=${{env.LLVM_DIR}}
+      run: cmake -B ${{github.workspace}}/build -DCMAKE_BUILD_TYPE=${{env.BUILD_TYPE}} -DLLVM_DIR=${{env.LLVM_DIR}} -DLDFLAGS="${{env.LDFLAGS}}" -DCPPFLAGS="${{env.CPPFLAGS}}"
 
     # Build (macOS)
     - name: Build (macOS)
@@ -80,7 +84,7 @@ jobs:
       working-directory: ${{github.workspace}}/build
       run: ctest -C ${{env.BUILD_TYPE}}
 
-  build-Windows:
+  build-windows:
     name: Build on Windows
     runs-on: windows-latest
 
@@ -89,19 +93,20 @@ jobs:
         uses: actions/checkout@v2
 
       - name: Set up MSVC
-        uses: actions/setup-msvc@v2
-        with:
-          msvc-version: latest
+        uses: ilammy/msvc-dev-cmd@v1
 
       - name: Install CMake
-        uses: actions/setup-cmake@v2
-        with:
-          cmake-version: latest
+        run: |
+          choco install cmake
+          echo "CMAKE_PATH=C:\path\to\cmake" >> $GITHUB_ENV
 
       - name: Install LLVM
         run: |
           choco install llvm
           echo "LLVM_DIR=C:\path\to\llvm\lib\cmake\llvm" >> $GITHUB_ENV
+
+      - name: Add CMake to PATH
+        run: echo "$CMAKE_PATH" >> $GITHUB_PATH
 
       - name: Configure CMake
         run: cmake -B build -S . -DCMAKE_BUILD_TYPE=Release -DLLVM_DIR=$LLVM_DIR
