--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -107,7 +107,7 @@ jobs:
   
     - name: Build LLVM
       run: |
-        $vsPath = (vswhere -latest -property installationPath)
+        $vsPath = (vswhere -products * -latest -property installationPath)
         Import-Module (Join-Path $vsPath "Common7\Tools\Microsoft.VisualStudio.DevShell.dll")
         Enter-VsDevShell -VsInstallPath $vsPath -SkipAutomaticLocation -DevCmdArguments "-arch=x64 -host_arch=x64 -winsdk=10.0.19041.0"
         git clone --branch llvmorg-16.0.6 --depth 1 https://github.com/llvm/llvm-project.git
