--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -79,14 +79,13 @@ jobs:
       working-directory: ${{github.workspace}}/build
       run: ctest -C ${{env.BUILD_TYPE}}
 
-
   build-windows:
     name: Build on Windows
     runs-on: windows-2022
   
     steps:
     - uses: actions/checkout@v3
-
+  
     - name: Check for cached LLVM
       uses: actions/cache@v3
       with:
@@ -99,27 +98,17 @@ jobs:
     - name: Install dependencies
       uses: crazy-max/ghaction-chocolatey@v1
       with:
-        args: install cmake ninja vswhere
+        args: install cmake ninja vswhere llvm
   
     - uses: GuillaumeFalourd/setup-windows10-sdk-action@v1
       with:
         sdk-version: 19041
   
-    - name: Build LLVM
+    - name: Configure Environment for Installed LLVM
       run: |
-        $vsPath = (vswhere -products * -latest -property installationPath)
-        Import-Module (Join-Path $vsPath "Common7\Tools\Microsoft.VisualStudio.DevShell.dll")
-        Enter-VsDevShell -VsInstallPath $vsPath -SkipAutomaticLocation -DevCmdArguments "-arch=x64 -host_arch=x64 -winsdk=10.0.19041.0"
-        git clone --branch llvmorg-16.0.6 --depth 1 https://github.com/llvm/llvm-project.git
-        cmake -Bbuild -GNinja "-DCMAKE_SYSTEM_VERSION=10.0.19041.0" -DCMAKE_MSVC_RUNTIME_LIBRARY=${{ matrix.rtlib }} -DCMAKE_BUILD_TYPE=Release -DCPACK_GENERATOR=ZIP "-DCMAKE_INSTALL_PREFIX=$pwd\\llvm-build" -DLLVM_TARGETS_TO_BUILD="X86" -DLLVM_ENABLE_PROJECTS="lld;clang;clang-tools-extra" -DLLVM_ENABLE_DIA_SDK=OFF llvm-project\\llvm
-        cmake --build build
-        cmake --install build --prefix $pwd\\llvm-build
-  
-    - name: Configure Environment for Built LLVM
-      run: |
-        echo "LLVM_DIR=$pwd\\llvm-build\\lib\\cmake\\llvm" >> $env:GITHUB_ENV
-        echo "Clang_DIR=$pwd\\llvm-build\\lib\\cmake\\clang" >> $env:GITHUB_ENV
-        echo "$pwd\\llvm-build\\bin" >> $env:GITHUB_PATH
+        echo "LLVM_DIR=C:\Program Files\LLVM\lib\cmake\llvm" >> $env:GITHUB_ENV
+        echo "Clang_DIR=C:\Program Files\LLVM\lib\cmake\clang" >> $env:GITHUB_ENV
+        echo "C:\Program Files\LLVM\bin" >> $env:GITHUB_PATH
   
     - name: Build C++ Project with LLVM
       run: |
