--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -116,5 +116,5 @@ jobs:
   
     - name: Build C++ Project with LLVM
       run: |
-        cmake -B ${{github.workspace}}/build -G "Ninja" -DCMAKE_BUILD_TYPE=${{env.BUILD_TYPE}} -DCMAKE_C_COMPILER=clang-cl -DCMAKE_CXX_COMPILER=clang-cl
+        cmake -B ${{github.workspace}}/build -DCMAKE_BUILD_TYPE=${{env.BUILD_TYPE}} -DCMAKE_C_COMPILER=clang-cl -DCMAKE_CXX_COMPILER=clang-cl
         cmake --build ${{github.workspace}}/build --config ${{env.BUILD_TYPE}}
