--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -99,5 +99,5 @@ jobs:
 
     - name: Build with CMake
       run: |
-        cmake -B build -G "Ninja" -DCMAKE_BUILD_TYPE=Release
+        cmake -B build -DCMAKE_BUILD_TYPE=Release
         cmake --build build
