Completed Lexer, added additional comments and features, and set up examples directory

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,15 +2,17 @@ cmake_minimum_required(VERSION 3.16)
 
 project(S-Lang VERSION 1.0.0)
 
-set(CMAKE_CXX_STANDARD 17)
+set(CMAKE_CXX_STANDARD 20)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 set(CMAKE_RUNTIME_OUTPUT_DIRECTORY "${PROJECT_BINARY_DIR}/bin")
 set(LIBRARY_OUTPUT_PATH "${PROJECT_BINARY_DIR}/lib")
-set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -Wextra -Werror -pedantic")
+# set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -g -Wall -Wextra -pedantic")
+set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -g")
 
 # Find LLVM
 find_package(LLVM REQUIRED CONFIG)
 message(STATUS "Found LLVM ${LLVM_PACKAGE_VERSION}")
+message(STATUS "Using LLVMConfig.cmake in: ${LLVM_DIR}")
 
 # Add the LLVM include directories and compile definitions
 include_directories(${LLVM_INCLUDE_DIRS})
@@ -34,6 +36,7 @@ set_lib_output_directory(Lexer)
 # AST library
 add_library(AST ${PROJECT_SOURCE_DIR}/src/ast.cpp)
 target_include_directories(AST PUBLIC "${PROJECT_SOURCE_DIR}/include")
+target_link_libraries(AST PUBLIC Lexer)
 set_lib_output_directory(AST)
 
 # Parser library
@@ -42,9 +45,13 @@ target_include_directories(Parser PUBLIC "${PROJECT_SOURCE_DIR}/include")
 target_link_libraries(Parser PUBLIC Lexer AST)
 set_lib_output_directory(Parser)
 
+# Link against LLVM libraries and project libraries
+llvm_map_components_to_libnames(LLVM_LIBS core)
+
 # CodeGen library
 add_library(CodeGen ${PROJECT_SOURCE_DIR}/src/codegen.cpp)
-target_include_directories(CodeGen PUBLIC "${PROJECT_SOURCE_DIR}/include")
+target_include_directories(CodeGen PUBLIC "${PROJECT_SOURCE_DIR}/include" "${LLVM_INCLUDE_DIRS}")
+target_link_libraries(CodeGen PUBLIC Parser Lexer AST ${LLVM_LIBS})
 set_lib_output_directory(CodeGen)
 
 # SlangProgram Library
@@ -55,12 +62,8 @@ set_lib_output_directory(SlangProgram)
 
 # Add the executable in app/main.cpp
 add_executable(slang ${PROJECT_SOURCE_DIR}/app/main.cpp)
-target_include_directories(slang PRIVATE "${PROJECT_SOURCE_DIR}/include")
-target_link_libraries(slang PRIVATE Lexer AST Parser CodeGen SlangProgram)
-
-# Link against LLVM libraries and project libraries
-llvm_map_components_to_libnames(llvm_libs all)
-target_link_libraries(slang ${llvm_libs})
+target_include_directories(slang PUBLIC "${PROJECT_SOURCE_DIR}/include")
+target_link_libraries(slang PUBLIC LLVMSupport Lexer AST Parser CodeGen SlangProgram)
 
 # For testing the Lexer and Parser
 enable_testing()
